--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container d-flex align-items-center h-100">
       <div class="row">
         <header class="text-center col-12">
-        <h1><strong></strong>THE BIGGEST STARTP EVENT OF THE YEAR</strong></h1>
+        <h1><strong></strong>THE BIGGEST STARTUP EVENT OF THE YEAR</strong></h1>
         </header>
         <div class="buffer col-12"></div>
         <section class="text-center col-12">
